work for #5693 fix "double border in the collapsed state"

--- a/packages/survey-creator-core/src/property-grid-theme/property-grid.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/property-grid.scss
@@ -20,7 +20,6 @@
 .spg-root-modern {
   position: relative;
   width: 100%;
-  border-right: 1px solid $border;
   box-sizing: border-box;
 }
 .spg-root-modern {
